# mock-mcp-test

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  test_connection.py  verify_aggregation.py  verify_filter_error.py  verify_large_scale.py
src/dataverse_mcp/: __init__.py  __main__.py  auth.py  client.py  config.py  dataverse_client.py  mock_client.py  server.py
src/dataverse_mcp/services/: __init__.py  column_guard.py  formatter.py  query.py  response_guard.py  summarizer.py
tests/: test_config.py  test_formatter.py  test_query.py  test_summarizer.py
